--- a/frontend/layouts/_default/baseof.html
+++ b/frontend/layouts/_default/baseof.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{{ "/css/consolidated.css" | relURL }}">
+    <link rel="stylesheet" href="{{ "/css/main.css" | relURL }}">
     <link rel="icon" type="image/png" sizes="32x32" 
     href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" 
